Try to fix the issue with content that should be hidden being visible initially before knockout bindings are applied
- Hide the body content div by default and let the KO visible binding show it when bindings are applied

--- a/src/KillrVideo/Content/Site.css
+++ b/src/KillrVideo/Content/Site.css
@@ -6,7 +6,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 /* ------------------------------------------------------------
     Common styles 
    ------------------------------------------------------------ */
-.body-content {
+#body-content {
     padding-top: 70px;
     padding-bottom: 30px;
 }
